--- a/src/main/resources/templates/doc.html
+++ b/src/main/resources/templates/doc.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="eng">
+<html xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
   <title>File Upload / Download</title>
-</head>
-<body>
-<script
+  <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--    <link rel="stylesheet" th:href="@{/css/style.css}">-->
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/hovermenu.css">
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-        src="/linkchains-bundle.js"></script>
-<div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/agency.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+</head>
+
+<body style="background-color: #24bbff" id="page-top" class="index">
+<br>
+<br>
+<br>
+<br>
+
+<script src="/linkchains-bundle.js"></script>
+<div class="main">
   <h3>Upload Multiple Files</h3>
   <form id="uploadFiles" name="uploadFiles" method="post"  th:action="@{/uploadFiles}" encType="multipart/form-data">
     <input type="file" name="files" multiple required />
@@ -16,25 +56,127 @@
   </form>
 </div>
 
-<div>
-  <h3>List of Documents</h3>
-  <table>
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Download Link</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="doc:${docs}">
-      <td th:text="${doc.id}" />
-      <td th:text="${doc.docName}"/>
-      <td><a th:href="@{'/downloadFile/'+${doc.id}}">Download</a></td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<!--<div>-->
+<!--  <h3>List of Documents</h3>-->
+<!--  <table>-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--      <th>Id</th>-->
+<!--      <th>Name</th>-->
+<!--      <th>Download Link</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+<!--    <tr th:each="doc:${docs}">-->
+<!--      <td th:text="${doc.id}" />-->
+<!--      <td th:text="${doc.docName}"/>-->
+<!--      <td><a th:href="@{'/downloadFile/'+${doc.id}}">Download</a></td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--  </table>-->
+<!--</div>-->
+
+
+<!-- Navigation User -->
+<nav class="navbar navbar-default navbar-fixed-top" sec:authorize="hasAnyAuthority('ROLE_USER')">
+  <div class="container" style="display: inline">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand page-scroll" href="/" >Certified</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right" style="display: inline">
+        <li class="hidden">
+          <a href="#page-top"></a>
+        </li>
+        <li>
+          <a class="active" href="/user">My Account</a>
+        </li>
+        <li>
+          <a  class="breadcrumb-item" href="/operation/user">My Documents</a>
+        </li>
+        <li>
+          <a  class="breadcrumb-item" href="/logout">Logout</a>
+        </li>
+        <!--                <li>-->
+        <!--                    <a class="page-scroll" href="">Contact</a>-->
+        <!--                </li>-->
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
+
+<!-- Navigation Admin -->
+<nav class="navbar navbar-default navbar-fixed-top" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+  <div class="container" style="display: inline">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand page-scroll" href="/" >Certified</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right" style="display: inline">
+        <li class="hidden">
+          <a href="#page-top"></a>
+        </li>
+        <!--                <li>-->
+        <!--                    <a class="breadcrumb-item" href="/user">My Account</a>-->
+        <!--                </li>-->
+        <li>
+          <a href="/users">Users Accounts</a>
+        </li>
+        <li>
+          <a  class="breadcrumb-item" href="/operation/user">My Documents</a>
+        </li>
+        <li>
+          <a href="/operation/users">Users Documents</a>
+
+        </li>
+        <li>
+          <a  class="breadcrumb-item" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
+
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="js/classie.js"></script>
+<script src="js/cbpAnimatedHeader.js"></script>
+
+<!-- Contact Form JavaScript -->
+<script src="js/jqBootstrapValidation.js"></script>
+<script src="js/contact_me.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="js/agency.js"></script>
 
 </body>
 </html>
