9 - User History navbar fix

--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -143,7 +143,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/" >Calculator</a>
+            <a class="navbar-brand page-scroll" href="/" >Certified</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -156,7 +156,7 @@
                     <a class="breadcrumb-item" href="/user">My Account</a>
                 </li>
                 <li>
-                    <a  class="breadcrumb-item" href="/operation/user">My History</a>
+                    <a  class="breadcrumb-item" href="/operation/user">My Documents</a>
                 </li>
                 <li>
                     <a  class="breadcrumb-item" href="/logout">Logout</a>
@@ -182,7 +182,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/" >Calculator</a>
+            <a class="navbar-brand page-scroll" href="/" >Certified</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -198,10 +198,10 @@
                     <a href="/users">Users Accounts</a>
                 </li>
                 <li>
-                    <a  class="breadcrumb-item" href="/operation/user">My History</a>
+                    <a  class="breadcrumb-item" href="/operation/user">My Documents</a>
                 </li>
                 <li>
-                    <a href="/operation/users">Users History</a>
+                    <a href="/operation/users">Users Documents</a>
 
                 </li>
                 <li>
