11 - All Users Documents History (methods and UI)

--- a/src/main/resources/templates/users_history.html
+++ b/src/main/resources/templates/users_history.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
     <meta charset="UTF-8">
     <title>History</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="/css/hovermenu.css">
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -16,9 +15,6 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.min.js"></script>
 
-
-    <!--Sweet Alert-->
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -37,8 +33,9 @@
     <![endif]-->
 </head>
 <body style="background-color: #24bbff">
+
 <!--&lt;!&ndash;Here starts the ADMIN menu html&ndash;&gt;-->
-<!--<div id="mySidebar" class="sidebar" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">-->
+<!--<div id="mySidebar" class="sidebar">-->
 <!--    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>-->
 <!--    &lt;!&ndash;    <a th:href="@{/user/{username}(username = ${#authentication.name})}">MyAccount</a>&ndash;&gt;-->
 <!--    <a href="/user">MyAccount</a>-->
@@ -46,17 +43,6 @@
 <!--    &lt;!&ndash;    <a th:href="@{/operation/user/{username}(username = ${#authentication.name})}">MyHistory</a>&ndash;&gt;-->
 <!--    <a href="/operation/user">MyHistory</a>-->
 <!--    <a href="/operation/users">UsersHistory</a>-->
-<!--    <a href="/">Calculator</a>-->
-<!--    <a href="/logout">Logout</a>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;Here starts the USER menu html&ndash;&gt;-->
-<!--<div id="mySidebar" class="sidebar" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
-<!--    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>-->
-<!--    &lt;!&ndash;    <a th:href="@{/user/{username}(username = ${#authentication.name})}">MyAccount</a>&ndash;&gt;-->
-<!--    <a href="/user">MyAccount</a>-->
-<!--    &lt;!&ndash;    <a th:href="@{/operation/user/{username}(username = ${#authentication.name})}">MyHistory</a>&ndash;&gt;-->
-<!--    <a href="/operation/user">MyHistory</a>-->
 <!--    <a href="/">Calculator</a>-->
 <!--    <a href="/logout">Logout</a>-->
 <!--</div>-->
@@ -83,39 +69,12 @@
 <br/>
 <br/>
 <div class="container my-2">
-    <h1 style="color: white;">Documents List</h1>
-    <a th:href="@{/operation/clear}" class="btn btn-primary btn-sm mb-3 delete" > Clear History </a>
-    <script>
-        $('.delete').on('click',function (e){
-            e.preventDefault();
-            let self = $(this);
-            console.log(self.data('title'));
-            Swal.fire({
-                title: 'Are you sure you want to delete all your history?',
-                text: "You won't be able to revert this!",
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, delete it!'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    Swal.fire({
-                            title:'Deleted!',
-                            text:'Your history has been deleted.',
-                            icon:'success',
-                            showConfirmButton: false,
-                        }
-                    )
-                    location.href =  self.attr('href');
-                }
-            })
-        })
-    </script>
-    <table id="history_table" class="table table-borderless table-responsive-md" style="width: 100%; background-color: white; border-radius:25px; ">
-        <thead style="background-color: #fec503; color:white; border-radius: 25px">
+    <h1  style="color: white;">Documents List</h1>
+    <table id="users_history_table" class="table table-striped table-responsive-md" style="width: 100%; background-color: white; border-radius:25px;">
+        <thead  style="background-color: #fec503; color:white; border-radius: 25px" >
         <tr>
             <th>ID</th>
+            <th>User</th>
             <th>Name</th>
             <th>Timestamp</th>
             <th>Download Link</th>
@@ -124,55 +83,60 @@
         <tbody>
         <tr th:each="doc : ${docs}">
             <td th:text="${doc.id}"></td>
+            <td th:text="${doc.user}"></td>
             <td th:text="${doc.docName}"></td>
             <td th:text="${doc.timestamp}"></td>
             <td><a th:href="@{'/downloadFile/'+${doc.id}}">Download</a></td>
         </tr>
         </tbody>
     </table>
+    <script>
+        // $(document).ready( function () {
+        //     $('#users_history_table').DataTable();
+        // } );
+        let table = $('#users_history_table').DataTable({
+            language: {
+                searchPlaceholder: "Search records",
+                search: "" },
+            initComplete : function() {
+                let input = $('.dataTables_filter input').unbind(),
+                    self = this.api(),
+                    $searchButton = $('<button>')
+                        .text('search')
+                        .click(function() {
+                            self.search(input.val()).draw();
+                        }),
+                    $clearButton = $('<button>')
+                        .text('clear')
+                        .click(function() {
+                            input.val('');
+                            $searchButton.click();
+                        })
+                $('.dataTables_filter').append($searchButton, $clearButton);
+            }
+        })
+
+    </script>
+    <style>
+        .dataTables_filter {
+            color: black;
+            background-color: white;
+        }
+
+        table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled{
+            background-position: left center;
+        }
+        table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled{
+            background-position: 5px center;
+        }
+        table.dataTable thead th, table.dataTable thead td {
+            padding: 10px 18px 10px 28px;
+        }
+    </style>
 </div>
 
-<!-- Navigation User -->
-<nav class="navbar navbar-default navbar-fixed-top" sec:authorize="hasAnyAuthority('ROLE_USER')">
-    <div class="container" style="display: inline">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand page-scroll" href="/" >Certified</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right" style="display: inline">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a class="breadcrumb-item" href="/user">My Account</a>
-                </li>
-                <li>
-                    <a  class="breadcrumb-item" href="/operation/user">My Documents</a>
-                </li>
-                <li>
-                    <a  class="breadcrumb-item" href="/logout">Logout</a>
-                </li>
-<!--                <li>-->
-<!--                    <a class="page-scroll" href="">Contact</a>-->
-<!--                </li>-->
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
-
 <!-- Navigation Admin -->
-<nav class="navbar navbar-default navbar-fixed-top" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container" style="display: inline">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
@@ -232,44 +196,5 @@
 <!-- Custom Theme JavaScript -->
 <script src="/js/agency.js"></script>
 
-<script>
-    let table = $('#history_table').DataTable({
-        language: {
-            searchPlaceholder: "Search records",
-            search: "" },
-        initComplete : function() {
-            let input = $('.dataTables_filter input').unbind(),
-                self = this.api(),
-                $searchButton = $('<button>')
-                    .text('search')
-                    .click(function() {
-                        self.search(input.val()).draw();
-                    }),
-                $clearButton = $('<button>')
-                    .text('clear')
-                    .click(function() {
-                        input.val('');
-                        $searchButton.click();
-                    })
-            $('.dataTables_filter').append($searchButton, $clearButton);
-        }
-    })
-</script>
-<style>
-    .dataTables_filter {
-        color: black;
-        background-color: white;
-    }
-
-    table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled{
-        background-position: left center;
-    }
-    table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled{
-        background-position: 5px center;
-    }
-    table.dataTable thead th, table.dataTable thead td {
-        padding: 10px 18px 10px 28px;
-    }
-</style>
 </body>
 </html>
