--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -129,6 +129,33 @@
             <td th:text="${doc.timestamp}"></td>
             <td><a th:href="@{'/downloadFile/'+${doc.id}}"  class="btn btn-outline-primary" >Download</a></td>
             <td><a th:href="@{'/deleteFile/'+${doc.id}}" class="btn btn-outline-danger delBtn delete-doc">Delete</a></td>
+            <script>
+                $('.delete-doc').on('click',function (e){
+                    e.preventDefault();
+                    let self = $(this);
+                    console.log(self.data('title'));
+                    Swal.fire({
+                        title: 'Are you sure you want to delete this document?',
+                        text: "You won't be able to revert this!",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'Yes, delete it!'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            Swal.fire({
+                                    title:'Deleted!',
+                                    text:'The document has been deleted.',
+                                    icon:'success',
+                                    showConfirmButton: false,
+                                }
+                            )
+                            location.href =  self.attr('href');
+                        }
+                    })
+                })
+            </script>
         </tr>
         </tbody>
     </table>
